--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <li class="intro-list-item">
                         <a href="#" class="intro-link">
                             <h3 class="intro-link-text">
-                                Baidu запустила публичный сервис роботакси Apollo Go в Шанхае
+                                Baidu запустила публичный <br> сервис роботакси Apollo Go в <br> Шанхае
                             </h3>
                         </a>
                         <p class="intro-text">
@@ -182,7 +182,7 @@
                     <li class="intro-list-item">
                         <a href="#" class="intro-link">
                             <h3 class="intro-link-text">
-                                Китайская марка JAC повысила цены на лифтбек и пикап в России
+                                Китайская марка JAC повысила цены на лифтбек и пикап в <br> России
                             </h3>
                         </a>
                         <p class="intro-text">
